gcc/testsuite/rust/rustc/ui/deprecation/deprecated_no_stack_check.rs
#![deny(warnings)]
#![feature(no_stack_check)]
// { dg-error ".E0557." "" { target *-*-* } .-1 }
fn main() {

}

